Fix dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,6 @@
 :root {
     --content-width: 75rem;
 
-    --border-color: #e5e7eb;
-
     --font-family: -apple-system, BlinkMacSystemFont, Aptos, Roboto, "Segoe UI", Helvetica, Arial;
     --font-family-mono: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
     --font-size-base: 11px;
@@ -12,9 +10,45 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.4rem;
     --font-size-xx-large: 3.4rem;
+
+    --tailwind-slate-50: #f8fafc;
+    --tailwind-slate-100: #f1f5f9;
+    --tailwind-slate-200: #e2e8f0;
+    --tailwind-slate-300: #cbd5e1;
+    --tailwind-slate-400: #94a3b8;
+    --tailwind-slate-500: #64748b;
+    --tailwind-slate-600: #475569;
+    --tailwind-slate-700: #334155;
+    --tailwind-slate-800: #1e293b;
+    --tailwind-slate-900: #0f172a;
+    --tailwind-slate-950: #020617;
+
+
+    --main-background-color: #ffffff;
+    --border-color: var(--tailwind-slate-200);
+    --card-border-color: var(--border-color);
+    --card-shadow-color: var(--border-color);
+    --button-color: var(--tailwind-slate-100);
+    --button-text-color: var(--tailwind-slate-600);
+    --muted-heading-color: var(--tailwind-slate-500);
+    --code-border-color: var(--border-color);
+    --code-background-color: var(--tailwind-slate-50);
+
+    @media (prefers-color-scheme: dark) {
+        --main-background-color: var(--tailwind-slate-800);
+        --border-color: var(--tailwind-slate-600);
+        --card-border-color: var(--border-color);
+        --card-shadow-color: var(--tailwind-slate-900);
+        --button-color: var(--tailwind-slate-700);
+        --button-text-color: var(--tailwind-slate-50);
+        --muted-heading-color: var(--tailwind-slate-400);
+        --code-border-color: var(--border-color);
+        --code-background-color: var(--tailwind-slate-700);
+    }
 }
 
 html {
+    background: var(--main-background-color);
     font-family: var(--font-family), sans-serif;
     font-size: var(--font-size-base);
     line-height: 1.4;
@@ -54,10 +88,10 @@ body {
 
     section {
         article {
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--card-border-color);
             border-radius: 3px;
             padding: 1rem 3rem 2rem;
-            box-shadow: 5px 5px 7px var(--border-color);
+            box-shadow: 5px 5px 7px var(--card-shadow-color);
             margin-bottom: 3rem;
             font-size: var(--font-size-medium);
 
@@ -71,7 +105,7 @@ body {
                 font-size: var(--font-size-small);
                 text-align: center;
                 font-weight: normal;
-                color: #6b7280;
+                color: var(--muted-heading-color);
             }
 
             .more {
@@ -84,12 +118,12 @@ body {
                     border-radius: 1rem;
                     padding: 0.5rem 1rem;
                     text-decoration: none;
-                    color: #4b5563;
-                    background-color: #f3f4f6;
+                    color: var(--button-text-color);
+                    background-color: var(--button-color);
                 }
 
                 &:visited {
-                    color: #4b5563;
+                    color: var(--button-text-color);
                 }
 
             }
@@ -126,7 +160,7 @@ body {
             font-size: var(--font-size-small);
             text-align: center;
             font-weight: normal;
-            color: #6b7280;
+            color: var(--muted-heading-color);
         }
 
         > .content {
@@ -141,8 +175,8 @@ body {
 
 /* Basic code formatting */
 code {
-    border: 1px solid var(--border-color);
-    background-color: #f9fafb;
+    border: 1px solid var(--code-border-color);
+    background-color: var(--code-background-color);
     padding: 3px;
     font-size: var(--font-size-x-small);
 }
@@ -150,9 +184,9 @@ code {
 pre {
     overflow-y: hidden;
     padding: 1rem;
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--code-border-color);
     border-radius: 3px;
-    background-color: #f9fafb;
+    background-color: var(--code-background-color);
 
     code {
         border: none;
